# ML4EO-workshop-2026

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml
configs/finetune/: config-ibm-geospatial-saltmarsh-uk-s2-extent-blank.yaml  config-ibm-geospatial-saltmarsh-uk-s2-extent-solution.yaml
configs/inference/: config-ibm-geospatial-saltmarsh-uk-rgbdem-extent-2m.yaml  config-ibm-geospatial-saltmarsh-uk-rgbdem-zone-2m.yaml  config-ibm-geospatial-saltmarsh-uk-s2-extent.yaml
workshop/1_Introduction_to_EO_FMs/: 1.1.py  1.1_Finetuning_with_Terramind.ipynb  1.1_Finetuning_with_Terramind.old.ipynb  1.1_Finetuning_with_Terramind_v2.ipynb  1.1b_Multimodal_Inference_with_Terramind.ipynb  1.2_Multiclass_Inference.ipynb  1.2_Zonal_Inference.ipynb  helper.py
workshop/2_Advanced_Geospatial_AI/2.1_TerraKit_Data_Prep/: 2.1_Terrakit_Data_Prep.ipynb  salt-marsh-data-prep-demo.ipynb
workshop/2_Advanced_Geospatial_AI/2.2_Iterate_Performance_Optimization/: 2.2_Iterate_Performance_Optimization.ipynb  Iterate.ipynb  config_salt_marsh.yaml  hpo_config.yaml  tm_multi_simple_s2_dem_stride_32_ccc.yaml  train_salt_marsh_trial.py
